compiler/e2e/test/snapshot/unsafe_function/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the symbol `struct main::MyType` cannot be used as an expression
  ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:9:5
  │
9 │     MyType.dangerous()
  │     ^^^^^^ cannot be used as an expression
  │
  = only variants, constants, functions, parameters, and variables can be used as expressions

error: Compilation aborted due to 1 error(s)



stdout:
